// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image Direct Gyazo image 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "",
        "raw": "[https://i.gyazo.com/0f82099330f378fe4917a1b4a5fe8815.png]",
        "src": "https://i.gyazo.com/0f82099330f378fe4917a1b4a5fe8815.png",
        "type": "image",
      },
    ],
    "type": "line",
  },
]
`;

exports[`image Gyazo image 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "",
        "raw": "[https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815]",
        "src": "https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/thumb/1000",
        "type": "image",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "",
        "raw": "[https://i.gyazo.com/0f82099330f378fe4917a1b4a5fe8815]",
        "src": "https://i.gyazo.com/0f82099330f378fe4917a1b4a5fe8815/thumb/1000",
        "type": "image",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "",
        "raw": "[https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/raw]",
        "src": "https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/raw",
        "type": "image",
      },
    ],
    "type": "line",
  },
]
`;

exports[`image Gyazo image with link 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "https://example.com",
        "raw": "[https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815 https://example.com]",
        "src": "https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/thumb/1000",
        "type": "image",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "https://example.com",
        "raw": "[https://example.com https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815]",
        "src": "https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/thumb/1000",
        "type": "image",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "https://gyazo.com/7057219f5b20ca8afd122945b72453d3",
        "raw": "[https://gyazo.com/7057219f5b20ca8afd122945b72453d3 https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815]",
        "src": "https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/thumb/1000",
        "type": "image",
      },
    ],
    "type": "line",
  },
]
`;

exports[`image HTTP jpeg image with special and japanese chars 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "",
        "raw": "[http://example.com/~!@#$%^&*()_+\`-={}\\\\'\\"?,.<>|/画像.jpeg]",
        "src": "http://example.com/~!@#$%^&*()_+\`-={}\\\\'\\"?,.<>|/画像.jpeg",
        "type": "image",
      },
    ],
    "type": "line",
  },
]
`;

exports[`image HTTPS svg and GIF image with link 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "https://example.com/",
        "raw": "[https://example.com/image.svg https://example.com/]",
        "src": "https://example.com/image.svg",
        "type": "image",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "https://example.com/",
        "raw": "[https://example.com/ https://example.com/image.GIF]",
        "src": "https://example.com/image.GIF",
        "type": "image",
      },
    ],
    "type": "line",
  },
]
`;

exports[`image Image with GET parameters 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "",
        "raw": "[http://example.com/image.png?key1=value1&key2=value2]",
        "src": "http://example.com/image.png?key1=value1&key2=value2",
        "type": "image",
      },
    ],
    "type": "line",
  },
]
`;

exports[`image Image with double image link 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "https://example.com/forward.png",
        "raw": "[https://example.com/forward.png https://example.com/backward.png]",
        "src": "https://example.com/backward.png",
        "type": "image",
      },
    ],
    "type": "line",
  },
]
`;

exports[`image Simple image 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "",
        "raw": "[http://example.com/image.png]",
        "src": "http://example.com/image.png",
        "type": "image",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "link": "",
        "raw": "[https://example.com/image.JPG]",
        "src": "https://example.com/image.JPG",
        "type": "image",
      },
    ],
    "type": "line",
  },
]
`;
